@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1746 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Enhanced ClassNameCRStrategy with dealWithFileOverwrite() functionality.
+       Details: http://jira.codehaus.org/browse/CASTOR-1746
+       (Werner - 20061220)
+
 XML:   Resolved issue CASTOR-1745 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Update and extend comments in castorbuilder.properties
        Details: http://jira.codehaus.org/browse/CASTOR-1745
